wbce/templates/advancedThemeWbFlat/css/theme.css
@font-face {
    font-family: 'open_sans';
    src: url('../fonts/opensans-bold-webfont.woff') format('woff'), url('webfonts/fonts/opensans-bold-webfont.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}
@font-face {
    font-family: 'open_sans';
    src: url('../fonts/opensans-regular-webfont.woff') format('woff'), url('webfonts/fonts/opensans-regular-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'open_sans';
    src: url('../fonts/opensans-bolditalic-webfont.woff') format('woff'), url('webfonts/fonts/opensans-bolditalic-webfont.woff2') format('woff2');
    font-weight: bold;
    font-style: italic;
}
@font-face {
    font-family: 'open_sans';
    src: url('../fonts/opensans-italic-webfont.woff') format('woff'),  url('webfonts/fonts/opensans-italic-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: italic;
}
/* old theme as basis 
 * --> not alle elements get a new format 
 * --------------------------------------------------------------------------------- */
/* new theme starts from here 
 * --> overwrite old classes
 * ---------------------------------------------------------------------------------  */

.pages_list {
    margin: 4px;
    padding: 4px;
    border: solid 2px #d5dde7 !important;
}
body {
    margin: 0;
}
img {
    vertical-align: middle;
}

/* 	added: last paragraph in DIV: no margin-bottom (margin normally given by padding of the parent div)
	p.ie-last-child --> for use with JQuery jq_lastchild.js */
div p:last-child, div p.ie-last-child {
    margin-bottom: 0 !important;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}
/* remember to define focus styles! */
:focus {
    outline: 0;
}
/* tables still need 'cellspacing="0"' in the markup */
table {
    border-collapse: separate;
    border-spacing: 0;
}
caption, th, td {
    font-weight: normal;
}
/* ::grid:: general grid and structure classes */
/* modern way off css: border-box for new elements */
* {
    box-sizing: border-box;
}
*:before, *:after {
    box-sizing: border-box;
}
/* clearing-classes */
.clearfix:before, .clearfix:after, .container:before, .container:after {
    content: " ";
    display: table;
}
.clearfix:after, .container:after {
    clear: both;
}
/* clearing class */
.clear {
    clear: both;
}
/* set traditional clearfix to structure classes */
.container:before, .container:after {
    content: '\0020';
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
}
.container:after {
    clear: both;
}
/* dynamic grid 
 * --> given number off columns-/box-elements adapts to the space of the outer element  */
/* set traditional clearfix to structure classes */
.dynamicGrid-outer:before, .dynamicGrid-outer:after {
    content: '\0020';
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
}
.dynamicGrid-outer:after {
    clear: both;
}
/* two columns */
.dynamicGrid_2 {
    box-sizing: border-box !important;
    float: left;
    width: 47%;
    margin-right: 6%;
}
.dynamicGrid_2:nth-child(2n) {
    margin-right: 0;
}
/* three columns */
.dynamicGrid_3 {
    box-sizing: border-box !important;
    float: left;
    width: 30%;
    margin-right: 5%;
}
.dynamicGrid_3:nth-child(3n) {
    margin-right: 0;
}
/* row & column grid
 * --> grid for advanced flexible positioning */
.columnGrid-outer, .columnGrid-outer * {
    box-sizing: border-box !important;
}
/* set traditional clearfix to .columnGrid-outer, .columnGrid-outer-fluid, .row */
.columnGrid-outer:before, .columnGrid-outer:after, .columnGridRow:before, .columnGridRow:after {
    content: '\0020';
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
}
.columnGrid-outer:after, .columnGridRow:after {
    clear: both;
}
.columnGrid-outer {
    position: relative;
    margin-right: auto;
    margin-left: auto;
}
/* row --> preparation for all columns */
.columnGridRow {
    position: relative;
    margin-left: -16px;
    margin-right: -16px;
}
.col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
    position: relative;
    min-height: 1px;
    padding-left: 16px;
    padding-right: 16px;
}
.col_1, .col_2, .col_3, .col_4, .col_5, .col_6, .col_7, .col_8, .col_9, .col_10, .col_11, .col_12 {
    float: left;
}
.col_1 {
    width: 8.33333333%;
}
.col_2 {
    width: 16.66666667%;
}
.col_3 {
    width: 25%;
}
.col_4 {
    width: 33.33333333%;
}
.col_5 {
    width: 41.66666667%;
}
.col_6 {
    width: 50%;
}
.col_7 {
    width: 58.33333333%;
}
.col_8 {
    width: 66.66666667%;
}
.col_9 {
    width: 75%;
}
.col_10 {
    width: 83.33333333%;
}
.col_11 {
    width: 91.66666667%;
}
.col_12 {
    width: 100%;
}
/* pull columns to left */
.col-pull_0 {
    right: auto;
}
.col-pull_1 {
    right: 8.33333333%;
}
.col-pull_2 {
    right: 16.66666667%;
}
.col-pull_3 {
    right: 25%;
}
.col-pull_4 {
    right: 33.33333333%;
}
.col-pull_5 {
    right: 41.66666667%;
}
.col-pull_6 {
    right: 50%;
}
.col-pull_7 {
    right: 58.33333333%;
}
.col-pull_8 {
    right: 66.66666667%;
}
.col-pull_9 {
    right: 75%;
}
.col-pull_10 {
    right: 83.33333333%;
}
.col-pull_11 {
    right: 91.66666667%;
}
.col-pull_12 {
    right: 100%;
}
/* push columns to right */
.col-push_0 {
    left: auto;
}
.col-push_1 {
    left: 8.33333333%;
}
.col-push_2 {
    left: 16.66666667%;
}
.col-push_3 {
    left: 25%;
}
.col-push_4 {
    left: 33.33333333%;
}
.col-push_5 {
    left: 41.66666667%;
}
.col-push_6 {
    left: 50%;
}
.col-push_7 {
    left: 58.33333333%;
}
.col-push_8 {
    left: 66.66666667%;
}
.col-push_9 {
    left: 75%;
}
.col-push_10 {
    left: 83.33333333%;
}
.col-push_11 {
    left: 91.66666667%;
}
.col-push_12 {
    left: 100%;
}
/* ... */

